--- a/backend/package.json
+++ b/backend/package.json
@@ -4,11 +4,12 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "dev": "nodemon app.js"
+    "start": "nodemon app.js",
+    "prod": "node app.js"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "@prisma/client": "^3.3.0",
     "bcryptjs": "^2.4.3",
